--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,9 @@ body{
 .btn:hover{
     background-color: rgba(10, 204, 238, 0.7);
 }
+
+
+.imagen-ventana{
+    height: 300px;
+    width: 300px;
+}
